[package]
name = "moonlight"
version = "0.1.0"
authors = ["Jeriel Baptista Verissimo <jeriel.verissimo@protonmail.com>"]
license = "MIT"
edition = "2018"
publish = true

description = "A terminal user interface crate"
respository = "https://github.com/jerielverissimo/moonlight.git"
readme = "README.md"

[dependencies]
addy = "0.1.1"
bitflags = "1.2.1"
csscolorparser = "0.4.0"
generational-arena = "0.2.8"
termion = "1.5.6"
unicode-width = "0.1.8"
